--- a/index.html
+++ b/index.html
@@ -5,6 +5,6 @@
         <title>Me Me Me</title>
     </head>
     <body>
-        <p>That's right, this page is all about me, because.</p>
+        <p>That's right! This page is all about me, because.</p>
     </body>
 </html>
